# LogiSceneGraph

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CppProperties.json  ExternalDependencies.cmake  README.md
TestResults/4940b588-3485-4a10-bdda-e0f62ddc510d/: Primoz_PL-LAPTOP 2019-02-02 17_14_53.coverage
cmake_modules/: AddSubdirectories.cmake  CreateTest.cmake  FindGLM.cmake  SetupGTest.cmake
include/: Common.h  Component.h  Identifiable.h  LSGMath.h  Object.h  Transform.h
include/lsg/: lsg.h
include/lsg/accelerators/: BVH.h
include/lsg/core/: Common.h  (+10 more)
libs/: CMakeLists.txt
libs/tinygltf/: CMakeLists.txt
src/: Component.cpp  Identifiable.cpp  Object.cpp  Transform.cpp
src/accelerators/: BVH.cpp
src/components/: GeometryReference.cpp  Mesh.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  Tansform.cpp  Transform.cpp
src/core/: Component.cpp  Identifiable.cpp  Object.cpp  ObjectComposite.cpp  Scene.cpp  VersionTracker.cpp
src/loaders/: gltfloader.cpp
src/materials/: Material.cpp  MetalicRoughnessMaterial.cpp  MetallicRoughnessMaterial.cpp
src/math/: AABB.cpp
src/resources/: Buffer.cpp  BufferAccessor.cpp  BufferView.cpp  Geometry.cpp  Image.cpp  Image1D.cpp  Image2D.cpp  Image3D.cpp  Sampler.cpp  SubMesh.cpp  Texture.cpp
test/: CMakeLists.txt
test/accelerators/: CMakeLists.txt
test/accelerators/src/: test_bvh.cpp  test_sbvh.cpp  test_sbvh.cpp.fixme
test/base/: CMakeLists.txt
test/base/src/: main.cpp  test_object.cpp  test_transform.cpp
test/core/: CMakeLists.txt
test/core/src/: test_identifiable.cpp  test_object.cpp  test_transform.cpp
test/libs/: CMakeLists.txt
test/loaders/: CMakeLists.txt
test/loaders/src/: test_gltf_loader.cpp
test/math/: CMakeLists.txt
test/math/src/: test_ray.cpp
test/resources/: CMakeLists.txt
test/resources/src/: test_buffer_accessor.cpp
(+47 files in other folders)
